--- a/src/style/splendor.css
+++ b/src/style/splendor.css
@@ -59,20 +59,20 @@
 }
 
 html {
-  font-size: 12px;
+  font-size: 10px;
 }
 
-@media screen and (min-width: 32rem) and (max-width: 48rem) {
-  html {
-    font-size: 15px;
-  }
-}
+/*@media screen and (min-width: 32rem) and (max-width: 48rem) {*/
+  /*html {*/
+    /*font-size: 15px;*/
+  /*}*/
+/*}*/
 
-@media screen and (min-width: 48rem) {
-  html {
-    font-size: 16px;
-  }
-}
+/*@media screen and (min-width: 48rem) {*/
+  /*html {*/
+    /*font-size: 16px;*/
+  /*}*/
+/*}*/
 
 body {
   line-height: 1.85;
@@ -163,13 +163,13 @@ body {
 
 p,
 *:not(div):not(img):not(body):not(html):not(li):not(blockquote):not(p) {
-  /*margin: 1rem auto 1rem;*/
-  /*max-width: 36rem;*/
+  margin: 1rem auto 1rem;
+  /*max-width: 49rem;*/
   padding: .25rem;
 }
 
 div {
-  width: 100%;
+  /*width: 100%;*/
 }
 
 div img {
