--- a/src/style/markdown.styl
+++ b/src/style/markdown.styl
@@ -30,6 +30,7 @@
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
+    background rgb(230,230,230)
   }
 
   thead {
@@ -148,7 +149,7 @@ textarea {
 /*@import url(http://fonts.googleapis.com/css?family=Merriweather:300italic,300);*/
 
 html {
-  font-size: 18px;
+  //font-size: 18px;
   max-width: 100%;
 }
 
@@ -179,8 +180,10 @@ div img {
 blockquote p {
   font-size: 1.5rem;
   font-style: italic;
-  margin: 1rem auto 1rem;
+  //margin: 1rem auto 1rem;
   max-width: 48rem;
+  background rgb(230,230,230)
+  color rgb(12,139,186)
 }
 
 li {
