--- a/src/style/markdown.styl
+++ b/src/style/markdown.styl
@@ -212,7 +212,7 @@ code {
 pre {
   background-color: #fafafa;
   font-size: .8rem;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding: 1.125em;
 }
 
